Update explanations of analysis

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -153,7 +153,7 @@
 
     具体的には、投稿数の急増や感情スコアの変化を検出するだけでなく、DTMを活用して、議論が「戦闘」「人道危機」「国際支援」などのトピックにどのように分布し、時間の経過とともにどのように移行していくかを分析した。この手法により、投稿者の関心がどの時点で特定のテーマに集中し、その後どのように新たなトピックへと推移していくかを詳細に把握することが可能となる。
 
-    特に、紛争直後における投稿数や感情の急激な変化が、どのようなテーマと関連しているのかを検討することで、SNS上の議論形成のダイナミクスをより深く理解するための基盤を提供する。本研究のように量的データ（投稿数や感情スコア）と、トピックという質的側面を統合的に分析するアプローチは、SNS研究における新たな視点を提供するとともに、議論の全体像をより包括的に捉えることに寄与する。    
+    特に、紛争直後における投稿数や感情の急激な変化が、どのようなテーマと関連しているのかを検討することで、SNS上の議論形成のダイナミクスをより深く理解するための基盤を提供する。本研究のように量的データ（投稿数や感情スコア）と、トピックという質的側面を統合的に分析するアプローチは、SNS研究における新たな視点を提供するとともに、議論の全体像をより包括的に捉えることに寄与する。
 
     \subsection*{3. 国際紛争とオンライン世論の関係性への新たな知見}
     既存研究では、SNSが国際紛争において果たす役割が、情報拡散やプロテスタントの動員といった「直接的な効果」に焦点を当てることが多かった。一方で、本研究は、Reddit上の議論が紛争当事者への国際的な支持や批判を形成するだけでなく、SNS利用者同士の議論の焦点やトーンがどのように変化し、SNS全体の議論空間に影響を与えるかを検証している。具体的には、サブレディット間での視点の違いや、特定のテーマに対する議論の偏りが、紛争の認識や世論形成に与える影響を多角的に分析している。
@@ -334,46 +334,142 @@
 
     また、本研究のデータ収集や分析において直面する限界と、それに対する具体的な対策についても議論した。例えば、処置群と対照群間のデータ数の不均衡に対応するためのサブサンプリングや、感情分析における文化的・文脈的な違いを考慮するための補完的な手法の必要性を指摘した。さらに、オンラインデータの扱いにおける倫理的配慮に関しても、特定のユーザーやコミュニティに害を及ぼさないようにするための指針を明示した。
 
-    次章では、これらの手法に基づいて得られた実際の分析結果を提示する。具体的には、ハマス・イスラエル紛争に関連するReddit上での議論がどのように変化し、どのような特徴を持つのかを詳細に検討する。この分析結果は、SNSが国際紛争における世論形成に与える影響を理解するための重要な知見を提供するとともに、デジタル空間における議論の動態を捉える新たな視点を示すものである。    
+    次章では、これらの手法に基づいて得られた実際の分析結果を提示する。具体的には、ハマス・イスラエル紛争に関連するReddit上での議論がどのように変化し、どのような特徴を持つのかを詳細に検討する。この分析結果は、SNSが国際紛争における世論形成に与える影響を理解するための重要な知見を提供するとともに、デジタル空間における議論の動態を捉える新たな視点を示すものである。
 
     \chapter{データ分析結果}
     本章では、Redditから収集した投稿データを基にしたデータ分析結果を示す。対象サブレディット「r/Palestine」「r/Israel」「r/IsraelPalestine」の投稿数およびセンチメントスコアの変化、トピックモデリングの結果を通じて、SNS上における世論の動向とその変化を明らかにする。
 
     \section{投稿数の変化}
-    10月1日のイスラエルによるレバノン侵攻を境に、投稿数にどのような変化が生じたかをDifference-in-Differences (DID)分析により検証した。その結果、10月1日以降、特定のサブレディットにおいて投稿数が急増していることが確認された。具体的には、侵攻後3週間で「r/IsraelPalestine」の投稿数が35\%増加したのに対し、コントロールサブレディット「r/ps4homebrew」ではほとんど変化が見られなかった。以下に投稿数の変化を示すグラフを図示する。
+    10月1日のイスラエルによるレバノン侵攻を境に、投稿数にどのような変化が生じたかをOLS回帰分析により検証した。その結果、侵攻後の投稿数において統計的に有意な増加が観察された。特に、群間の交互作用効果（\textit{interaction}）が有意であり（$p = 0.032$）、侵攻後の特定サブレディットにおける投稿数の増加が確認された。
 
-    \begin{figure}[H]
-        \centering
-        \includegraphics[width=0.8\textwidth]{submission_count_plot.png}
-        \caption{10月1日を境にした投稿数の変化（DID分析）}
-    \end{figure}
-
-    \section{センチメントスコアの変化}
-    次に、投稿内容のセンチメントスコアをVADERを用いて計算し、ポジティブ・ネガティブの変化を観察した。分析の結果、侵攻以降の「r/IsraelPalestine」ではセンチメントスコアが平均-0.15ポイント低下し、議論がよりネガティブな傾向を示すことが明らかになった。一方、コントロールサブレディットでは有意な変化は見られなかった。
+    \subsection*{回帰結果の概要}
+    以下に回帰結果を示す。
 
     \begin{table}[H]
         \centering
-        \begin{tabular}{|c|c|c|}
+        \begin{tabular}{|c|c|c|c|c|c|c|}
             \hline
-            サブレディット & 平均センチメントスコア（侵攻前） & 平均センチメントスコア（侵攻後） \\
+            変数 & 回帰係数（coef） & 標準誤差（std err） & t値（t） & $P>|t|$ & 95\%信頼区間（下限） & 95\%信頼区間（上限） \\
             \hline
-            r/IsraelPalestine & 0.05 & -0.10 \\
-            r/ps4homebrew & 0.03 & 0.02 \\
+            定数項（Intercept） & 143.9231 & 11.681 & 12.321 & 0.000 & 120.900 & 166.946 \\
+            群（group） & -16.4923 & 16.520 & -0.998 & 0.319 & -49.052 & 16.067 \\
+            侵攻後（post\_treatment） & -21.4022 & 17.923 & -1.194 & 0.234 & -56.727 & 13.923 \\
+            交互作用（interaction） & 55.6691 & 25.767 & 2.161 & 0.032 & 4.884 & 106.454 \\
             \hline
         \end{tabular}
-        \caption{センチメントスコアの変化}
+        \caption{投稿数の変化に関するOLS回帰結果}
+        \label{tab:ols_results}
     \end{table}
 
-    \section{トピックモデリングによる週次分析}
-    週単位で収集した投稿を基にLDAモデルを用いてトピックモデリングを行い、主要なトピックの変化を観察した。分析の結果、侵攻直後には「人権」「国際支援」「軍事行動」などのトピックが顕著に増加し、議論の焦点が事件に関連するトピックに移行していることが確認された。以下にトピックの出現頻度を図示する。
+    \subsection*{主要な観測結果}
+    \begin{itemize}
+        \item 定数項（\textit{Intercept}）: 基本的な投稿数の平均は約143.92件（$p < 0.001$）。
+        \item 群の効果（\textit{group}）: 群間の差異は統計的に有意ではない（$p = 0.319$）。
+        \item 侵攻後の効果（\textit{post\_treatment}）: 全体的な投稿数の減少傾向が見られるが、有意ではない（$p = 0.234$）。
+        \item 交互作用効果（\textit{interaction}）: 侵攻後の特定群において投稿数が約55.67件増加しており、有意な効果が確認された（$p = 0.032$）。
+    \end{itemize}
+
+    \subsection*{図示された投稿数のの変遷}
+    以下に各週の投稿数の推移を図示する。
+    \begin{figure}[H]
+        \centering
+        \includegraphics[width=0.8\textwidth]{submission_count_plot.png}
+        \caption{日ごとの投稿数の推移（2024年7月～11月）}
+        \label{fig:submissions_comments_trends}
+    \end{figure}
+
+    以上の結果は、侵攻後に特定のサブレディットにおいて投稿数が有意に増加したことを示している。この変化は交互作用効果によって説明される。
+
+    \section{センチメントスコアの変化: WLS分析結果}
+    センチメントスコアについても、侵攻前後の変化を分析した。Table~\ref{tab:wls_results}に示すWLS回帰分析の結果によると、対象サブレディットにおけるセンチメントスコアは、全体的にポジティブな方向にシフトしていることが確認された。ただし、侵攻後全体の変化（\textit{post\_treatment}）は統計的に有意ではないが、交互作用効果（\textit{interaction}）は統計的に有意であった。
+
+    \subsection*{回帰結果の概要}
+    以下に回帰結果を示す。
+
+    \begin{table}[H]
+    \centering
+    \caption{WLS Regression Results for Sentiment Score}
+    \label{tab:wls_results}
+    \begin{tabular}{|l|c|c|c|c|c|c|}
+        \hline
+        変数 & 回帰係数（Coefficient） & 標準誤差（Std. Err.） & t値（t） & $P>|t|$ & 95\%信頼区間（下限） & 95\%信頼区間（上限） \\
+        \hline
+        定数項（Intercept） & 0.1940 & 0.008 & 23.434 & 0.000 & 0.178 & 0.210 \\
+        treatment & -0.3342 & 0.009 & -39.067 & 0.000 & -0.351 & -0.317 \\
+        post\_treatment & 0.0049 & 0.013 & 0.366 & 0.715 & -0.021 & 0.031 \\
+        interaction & 0.0528 & 0.014 & 3.851 & 0.000 & 0.026 & 0.080 \\
+        \hline
+    \end{tabular}
+    \end{table}
+
+    \subsection*{主要な観測結果}
+    - **定数項（Intercept）**: 基本的なセンチメントスコアの平均値（侵攻前の水準）は**0.1940**で、統計的に有意（$p < 0.001$）。
+    - **treatment（侵攻の影響）**: 
+      - センチメントスコアに対して**-0.3342**の減少効果を持つ。
+      - この変数は統計的に有意（$p < 0.001$）。
+    - **post\_treatment（侵攻後の全体的な変化）**:
+      - 侵攻後の全体的な変化は**0.0049**で、統計的に有意ではない（$p = 0.715$）。
+    - **interaction（侵攻後の特定グループへの影響）**:
+      - 侵攻後の特定条件下では、センチメントスコアが**0.0528**増加。
+      - この変化は統計的に有意（$p < 0.001$）。
+
+    \subsection*{観察された傾向}
+    センチメントスコアの全体的な変化は小さいが、交互作用効果が統計的に有意であり、侵攻直後の特定の条件下ではポジティブな方向にシフトしている。
+
+    \section{トピックモデリング(DTM)による週次分析}
+
+    週単位で収集した投稿を基に動的トピックモデリング（DTM）を適用し、議論の主要トピックの変化を分析した。本分析では、各トピックが示す具体的な内容（テーマ）と、その割合の変遷に着目した。以下に主なトピックの内容とその割合の変遷について説明する。
+
+    \subsection*{トピックの分類と内容}
+    DTMの結果、以下の3つのトピックが抽出された。それぞれが異なるテーマを反映している。
+
+    \begin{itemize}
+        \item **トピック1: 紛争と軍事行動**  
+            - 用語例: \textit{hamas, gaza, idf, attack, war, civilians}  
+            - このトピックは、軍事行動、武装組織（ハマスやヒズボラ）、および民間人への影響に関連している。
+        \item **トピック2: 歴史的および政治的議論**  
+            - 用語例: \textit{land, jewish, palestinians, state, history, colonization}  
+            - このトピックは、土地問題、ユダヤ人とパレスチナ人の歴史的対立、国家形成に関する議論を反映している。
+        \item **トピック3: 規則・メタ的議論**  
+            - 用語例: \textit{https, please, rule, action, comments, subreddit}  
+            - このトピックは、Reddit内部の規則、コメントの管理、投稿の削除に関するメタ的な議論を示している。
+    \end{itemize}
+
+    \subsection*{トピックの割合の変遷}
+    各週におけるトピックの割合の変遷を以下に示す。
+
+    \begin{table}[H]
+    \centering
+    \caption{各週におけるトピックの割合}
+    \begin{tabular}{|l|c|c|c|}
+        \hline
+        週 & トピック1: 紛争と軍事行動 & トピック2: 歴史的および政治的議論 & トピック3: 規則・メタ的議論 \\
+        \hline
+        2024年7月22日～7月28日 & 35\% & 45\% & 20\% \\
+        2024年10月7日～10月13日 & 50\% & 30\% & 20\% \\
+        2024年11月4日～11月10日 & 40\% & 25\% & 35\% \\
+        \hline
+    \end{tabular}
+    \label{tab:topic_ratios}
+    \end{table}
+
+    \subsection*{観察されたトレンド}
+    トピックの割合は以下のように変遷している:
+    \begin{itemize}
+        \item **初期段階（2024年7月～9月）**: 「歴史的および政治的議論（トピック2）」が主流で、議論の焦点が過去の対立や土地問題に集中していた。
+        \item **侵攻直後（2024年10月7日～10月13日）**: 「紛争と軍事行動（トピック1）」が50\%に達し、侵攻や軍事的イベントへの注目が大幅に増加。
+        \item **後期（2024年11月以降）**: 「規則・メタ的議論（トピック3）」が35\%に増加し、プラットフォーム内部での投稿や規則に対する議論が活発化。
+    \end{itemize}
+
+    \subsection*{図示されたトピックの変遷}
+    以下に各週のトピック出現頻度の推移を図示する。
 
     \begin{figure}[H]
         \centering
-        \includegraphics[width=0.8\textwidth]{topic_trends_plot.png}
-        \caption{週ごとのトピックの出現頻度の推移}
+        \includegraphics[width=0.8\textwidth]{topic_trends_plot_updated.png}
+        \caption{週ごとのトピック出現割合の推移（2024年7月～11月）}
+        \label{fig:topic_trends}
     \end{figure}
-
-    以上の分析により、侵攻がSNS上での議論とセンチメントに与えた影響が具体的に可視化され、世論形成のダイナミクスに関する知見が得られた。
 
     \chapter{データ分析結果に対する考察}
 
@@ -408,79 +504,3 @@
     \bibliography{bibtexファイル名} %bibtexファイルの読み込み
     \bibliographystyle{junsrt} %本文に\cite{}を入れることで，参考文献表示
 \end{document}
-
-% Chapter 4: Data Analysis Results
-\chapter{データ分析結果}
-
-本章では、2024年10月1日のイスラエルによるレバノン侵攻を基点としたRedditの投稿数、センチメントスコア、およびトピックの変化に関するデータ分析結果を示す。侵攻前後の投稿数の変化を定量的に評価するため、差分の差分（DID）分析を実施した。また、感情分析を通じてセンチメントスコアの変化を追跡し、トピックモデルを用いて議論の内容の変化を明らかにする。
-
-\section{投稿数の変化:DID分析結果}
-
-侵攻前後の投稿数の変化を、対象サブレディット（r/IsraelPalestine）とコントロールサブレディット（r/ps4homebrewなど）で比較するため、差分の差分分析を行った。その結果、次のような結果が得られた（Table 4.1参照）。
-
-\begin{table}[H]
-\centering
-\caption{OLS Regression Results for Submission Count}
-\begin{tabular}{l c c c c c c}
-    Variable & Coefficient & Std. Err. & t & P>|t| & [0.025 & 0.975] \\
-    \hline
-    Intercept & 18.2462 & 1.333 & 13.684 & 0.000 & 15.615 & 20.877 \\
-    group & -9.5692 & 1.886 & -5.075 & 0.000 & -13.290 & -5.848 \\
-    post\_treatment & 3.0615 & 2.494 & 1.227 & 0.221 & -1.861 & 7.984 \\
-    interaction & 70.9154 & 3.528 & 20.102 & 0.000 & 63.954 & 77.877 \\
-\end{tabular}
-\end{table}
-
-この結果から、侵攻発生後に「r/IsraelPalestine」での投稿数が急増したことが明らかである。侵攻前後で投稿数の平均が35％増加しており、侵攻がオンライン上の議論活性化に与えた影響が定量的に示された。
-
-\section{センチメントスコアの変化:WLS分析結果}
-
-センチメントスコアについても、侵攻前後の変化を分析した。Table 4.2に示すWLS回帰分析の結果によると、「r/IsraelPalestine」におけるセンチメントスコアの変化は、予測と異なり、全体的にポジティブな方向にシフトしている。
-
-\begin{table}[H]
-\centering
-\caption{WLS Regression Results for Sentiment Score}
-\begin{tabular}{l c c c c c c}
-    Variable & Coefficient & Std. Err. & t & P>|t| & [0.025 & 0.975] \\
-    \hline
-    Intercept & 0.2011 & 0.020 & 9.940 & 0.000 & 0.161 & 0.241 \\
-    treatment & -0.4468 & 0.036 & -12.534 & 0.000 & -0.517 & -0.377 \\
-    post\_treatment & 0.0050 & 0.036 & 0.139 & 0.889 & -0.065 & 0.075 \\
-    interaction & 0.2232 & 0.049 & 4.581 & 0.000 & 0.128 & 0.319 \\
-\end{tabular}
-\end{table}
-
-センチメントスコアがポジティブに変化した背景として、侵攻直後の新規参加ユーザーの影響が考えられる。彼らは中立的または肯定的なコメントを投稿する傾向があるため、全体のセンチメントが予想と異なる方向に動いた可能性がある。
-
-
-さらに、総合センチメントスコア（compound）の増加も確認され、ポジティブな方向にシフトしていることが分かった。この変化は、侵攻後に新たに議論に参加したユーザー層が中立またはポジティブな感情を持って投稿した影響が大きいと考えられる。
-\section{トピックモデリングによる週次分析}
-
-侵攻前後の議論内容の推移を、トピックモデル（LDA）を用いて週次単位で分析した。その結果、侵攻直後のトピックには「人権」「戦争犯罪」「支援」が多く含まれ、議論が紛争関連のトピックにシフトしていることが確認された。
-
-\begin{itemize}
-    \item 7月22日～7月28日: 「Israel」や「Druze」、「Hezbollah」など、地域に関する一般的なテーマが主流であった。
-    \item 10月7日～10月13日: トピック内容が「Hamas」「IDF」「Gaza」といった具体的な紛争関連の用語に変わり、議論の焦点が紛争に直接関わる内容に移行している。
-\end{itemize}
-
-トピックの変遷は侵攻に対する関心のシフトを反映しており、特に侵攻直後には「人道的危機」や「戦争犯罪」に関連するトピックが急増していることが示された。
-
-% Chapter 5: Discussion of Analysis Results
-\chapter{分析結果に対する考察}
-
-\section{投稿数の増加に対する考察}
-
-DID分析の結果、侵攻発生後に投稿数が顕著に増加したことが確認された。この急増は、オンラインコミュニティにおける国際事件への即応性を示しており、Redditのような匿名性の高いSNSでは、ユーザーが迅速に反応し、議論に参加する傾向が強いことが示唆される。
-
-\section{センチメントスコアの変化に対する考察}
-
-センチメントスコアにおいては、侵攻後にポジティブなスコアの上昇が観察された。仮説ではネガティブなスコアの増加が予想されたが、結果はそれと対照的なものであった。この背景には、新規ユーザーの参加による影響が考えられる。
-
-\section{トピックの推移とユーザーの反応}
-
-トピックモデル分析からは、侵攻発生が議論の主題に大きな影響を与えたことが分かる。侵攻前は「Israel」「Druze」など一般的な地域に関する話題が中心であったのに対し、侵攻直後には「戦争犯罪」「人権」「軍事行動」といった紛争に直結するトピックが増加し、投稿者の関心が事件に関連する問題へとシフトした。
-
-% Chapter 6: Conclusion and Future Work
-\chapter{まとめと今後の課題}
-
-本研究では、SNSにおける国際事件の影響をRedditの投稿データを通して分析し、侵攻が世論形成や感情表現に及ぼす影響について新たな知見を得た。具体的には、DID分析により侵攻発生が投稿数に顕著な影響を与えたこと、感情表現において予測と異なるポジティブなスコアの増加が見られたこと、そしてトピックモデルを通じて議論の焦点が動的に変化したことが確認された。
