--- a/docs/main.tex
+++ b/docs/main.tex
@@ -471,20 +471,52 @@
         \label{fig:topic_trends}
     \end{figure}
 
-    \chapter{データ分析結果に対する考察}
+    \section{分析結果に対する考察}
 
-    本章では、前章のデータ分析結果に基づき、各分析結果に対する考察を行う。また、初めに立てた仮説との比較を通じて、SNSにおける世論形成と紛争の関係について深い洞察を得る。
+    本研究は、2024年10月1日のイスラエルによるレバノン侵攻がReddit上の議論やユーザーの反応に与えた影響を明らかにし、SNSが国際紛争に果たす役割を考察するものである。本章では、「はじめに」で提示した仮説と分析結果を関連付けつつ、投稿数、感情的傾向、トピックの変遷を統合的に議論する。
 
-    \section{投稿数の変化に対する考察}
-    10月1日を境にした投稿数の急増は、イスラエルによるレバノン侵攻がSNS上の議論活性化を引き起こしたことを示唆している。特に「r/IsraelPalestine」における35\%の増加は、紛争に関する議論が多くのユーザーを引き寄せたことを意味すると考えられる。当初の仮説では、紛争の発生がSNS上での議論活性化を促進すると予測しており、本分析はこの仮説と一致する結果となった。一方で、コントロールサブレディット「r/ps4homebrew」では投稿数の変化が見られなかったことから、投稿増加は紛争関連のサブレディットに限定された現象であると考えられる。
+    \subsection{SNSとデジタル公共圏の形成}
+    分析結果は、投稿数の急増とセンチメントスコアの変化がRedditをデジタル公共圏として機能させたことを示している。仮説1では「紛争関連サブレディットの投稿数が急増する」としたが、DID分析の結果、この仮説は支持された。
 
-    \section{センチメントスコアの変化に対する考察}
-    VADERを用いたセンチメントスコアの分析結果から、10月1日以降に「r/IsraelPalestine」のセンチメントスコアが-0.15ポイント低下したことが示された。これは、紛争に対する議論がよりネガティブな内容を含むものに変化したことを示唆している。仮説として、紛争が激化することでSNS上の議論も感情的になると予測しており、この結果はその仮説と一致する。
+    投稿数の増加は、紛争がオンラインで公共圏を再編するプロセスを示している。この現象をハーバーマスの「公共圏」理論\cite{habermas1989structural}に照らして考えると、以下の特徴が明らかとなる:
 
-    加えて、センチメント分析の追加結果として、compoundスコアが性の方向に増加する傾向が見られた。これは、10月1日以前からアクティブであったユーザー層と、新たに参加したユーザー層が異なる特徴を持つ可能性を示唆している。特に、ニュース報道等を受けて新たに投稿を行ったユーザーがポジティブな言葉遣いをする傾向にあると仮定できる。
+    \begin{itemize}
+        \item \textbf{議論の活性化と新規ユーザーの流入}: 投稿数の急増とセンチメントスコアのポジティブな変化を関連付けると、侵攻後の新規ユーザーの流入が議論を活性化させ、ネガティブなセンチメントを緩和した可能性が高い。この現象は仮説2の修正を必要とするが、SNSが紛争の初期段階で多様な意見を取り込む力を持つことを示している。
+        \item \textbf{情報の迅速な共有}: 紛争関連サブレディットにおける投稿数の急増は、情報が迅速に共有されると同時に、議論が特定のテーマに集中する特徴を持つ。これは、公共圏のオンライン移行が危機的状況で特に顕著であることを示唆する。
+    \end{itemize}
 
-    \section{新規ユーザー層と既存ユーザー層の比較}
-    「r/Palestine」「r/Israel」「r/IsraelPalestine」サブレディットにおいて、10月1日までにアクティブだったユーザーと、それ以降にアクティブになったユーザー層を比較した。結果として、10月1日以降に新たに投稿したユーザー層は、従来のアクティブ層と比べてポジティブなセンチメントスコアを持つ傾向が確認された。これは、既存のアクティブユーザーがすでに紛争に対して強い感情を持っているのに対し、新たに参加したユーザー層は状況に対する感情的な反応が比較的穏やかな傾向があると考えられる。
+    ただし、SNSの公共圏としての役割には限界も存在する。アルゴリズムやエコーチェンバー現象\cite{pariser2011filter}が意見の多様性を阻害する可能性があり、これが議論の健全性にどのように影響するかはさらに検討が必要である。
+
+    \subsection{感情的傾向の変化と情動の役割}
+    センチメントスコアのポジティブシフトは、当初の仮説2（「ネガティブ化」）と異なる結果を示した。この結果を社会学的視点から解釈すると、以下の要素が浮かび上がる:
+
+    \begin{itemize}
+        \item \textbf{情動的緩衝材としての新規ユーザー}: 新規ユーザーが中立的または肯定的な意見を投稿することで、従来のネガティブな議論を緩和する役割を果たした可能性がある。この現象は、デジタル空間における情動の伝播（emotional contagion）\cite{kleinberg2020emotion}が議論のトーンを変える力を持つことを示している。
+        \item \textbf{文化的要因}: センチメントスコアの変化には、紛争地域外のユーザーが主導する人道的支援や平和的解決を求める声が反映されている可能性がある。SNSの国際的な性質が、このような文化的多様性を議論に反映させている。
+    \end{itemize}
+
+    これらの結果は、紛争直後のSNSが、情報共有だけでなく、情動的な安定化装置としても機能することを示唆している。
+
+    \subsection{トピックの変遷と議論の多層性}
+    仮説3では「議論が戦闘や人道危機から国際支援や解決策へと焦点を移す」としたが、トピックモデリングの結果、実際には「軍事行動」や「人道危機」から「規則」や「投稿削除」に議論が移行したことが確認された。これにより仮説3の一部は否定されるが、議論の焦点が時間の経過とともに変化するという主張は支持された。
+
+    \begin{itemize}
+        \item \textbf{急性期の集中化}: 紛争直後には「軍事行動」や「人道危機」が主要なトピックとして浮上し、議論の焦点が緊急性の高いテーマに集中した。この現象は、SNSが紛争時において迅速な情報共有とリアルタイムの意思形成の場となることを示している。
+        \item \textbf{後期のメタ的議論への移行}: 時間の経過とともに「規則」や「投稿削除」に関するメタ的議論が増加し、議論疲れ\cite{sunstein2001republic}や分極化が進行した可能性が示唆される。この移行は、SNSが単なる情報共有の場にとどまらず、プラットフォーム内部の規則や権力構造に対する自己批判的な議論の場ともなっていることを意味する。
+    \end{itemize}
+
+    これらの結果は、SNS上の議論が現実世界の紛争と連動しつつも、その独自の動態を持つことを示している。ただし、この動態はRedditという特定のプラットフォームに依存するため、SNS全体の法則として一般化することは慎重であるべきである。
+
+    \subsection{包括的結論: 仮説と結果の統合}
+    本研究の分析結果は、SNSが国際紛争において以下のような多層的な役割を果たすことを示した:
+    \begin{enumerate}
+        \item 新規ユーザーの流入が議論の内容と感情的トーンに与える影響を通じて、デジタル公共圏を再編する。
+        \item 紛争急性期における情報共有と議論の集中化が、リアルタイムの社会的合意形成を可能にする。
+        \item 時間の経過とともに議論疲れや分極化が進行し、SNSが自己批判的文化を育む場となる。
+    \end{enumerate}
+
+    
+    ただし、これらの結論はReddit上の観察結果に基づくものであり、他のSNSや異なる文化圏では異なる動態が見られる可能性がある。本研究の結果を一般化することは慎重を要する一方で、SNSを用いた紛争対応策の設計や運営における一つの出発点として意義を持つ。
 
     \chapter{まとめ}
 
