--- a/docs/main.tex
+++ b/docs/main.tex
@@ -519,9 +519,49 @@
 
     \chapter{まとめ}
 
-    本研究では、SNS上での世論形成において、紛争がいかに影響を及ぼすかをRedditの投稿データを基に分析した。分析の結果、イスラエルによるレバノン侵攻がSNS上の議論を活性化させ、投稿内容にもネガティブな影響を与えたことが明らかになった。特に、侵攻以降の新規ユーザー層の参加は、議論の多様化とポジティブな言葉遣いの増加をもたらしたことが示唆された。
+    \section{研究の要約}
+    本研究は、2024年10月1日のイスラエルによるレバノン侵攻を契機として、Reddit上における議論の変遷を分析し、SNSが国際紛争に果たす役割を明らかにすることを目的として実施された。投稿数の変化、感情スコアの推移、トピックの変遷という3つの観点から、多角的なデータ分析を行った結果、以下の知見が得られた:
 
-    今後の研究では、SNS上でのリアルタイムな感情変化を追跡する手法の開発や、他のSNSプラットフォームとの比較研究が期待される。SNSが持つ影響力を理解し、紛争解決や情報共有における効果的な活用方法を模索することが今後の課題である。
+    \begin{enumerate}
+        \item 投稿数の急増は、新規ユーザーの流入や紛争関連情報の共有が活発化したことを示し、SNSがデジタル公共圏として機能する一端を明らかにした。
+        \item センチメントスコアの分析から、紛争直後に議論がポジティブな方向へシフトする現象が確認された。この変化は、新規ユーザーの中立的または肯定的な意見の流入に起因すると考えられる。
+        \item 動的トピックモデリング（DTM）の結果、議論の焦点が「軍事行動」や「人道危機」から「規則」や「投稿削除」といったメタ的議論へと移行する傾向が観察された。
+    \end{enumerate}
+
+    これらの結果は、Redditが単なる情報共有の場にとどまらず、ユーザー間の多層的な議論やプラットフォーム内部の文化的特徴が影響を及ぼすことを示している。
+
+    \section{研究の限界と課題}
+    本研究で得られた知見にはいくつかの限界があり、それらを克服するための具体的な課題が残されている。
+
+    \subsection{データの一般化可能性の制約}
+    本研究の分析対象はRedditに限定されており、他のSNSや異なる文化圏における議論動態を考慮していない。たとえば、TwitterやFacebookといった他のプラットフォームでは、リアルタイム性やアルゴリズムの影響が議論の形成に大きな役割を果たす可能性がある。また、言語や文化的背景の異なるユーザーが議論にどのように影響を与えるかも未検討である。これを解決するためには、複数のプラットフォームを対象とし、異文化間での比較研究を進める必要がある。
+
+    \subsection{感情分析の精度向上}
+    感情分析に使用したVADERは、SNSデータに特化して設計されている一方で、皮肉や隠喩、文化的文脈に依存する表現を十分に捉えられない可能性がある。この限界を克服するため、深層学習を用いた感情分析モデルの導入や、人間の評価によるデータの補正を組み合わせることが有効である。また、言語的多様性を考慮し、多言語対応の感情分析モデルを採用することで、分析の信頼性をさらに高めることが期待される。
+
+    \subsection{長期的な議論の動態の追跡}
+    本研究の分析期間は約3か月間であり、紛争の初期段階に焦点を当てている。これにより、議論が時間の経過とともにどのように発展し、沈静化するかについての包括的な理解には至っていない。今後の研究では、長期間のデータを収集し、議論の成長、疲弊、そして再構築のプロセスを時系列的に分析する必要がある。
+
+    \section{研究結果の具体的な意義}
+    本研究で得られた知見は、SNSの活用や規制に関して以下の具体的な指針を提供する:
+
+    \begin{enumerate}
+        \item \textbf{紛争時の情報共有と世論形成の促進}:
+        紛争急性期における投稿数の急増とトピック集中化の観察結果は、SNSが迅速な情報共有とリアルタイムの世論形成を可能にする重要なツールであることを示している。政策立案者にとって、SNSを活用して国際社会の関心を喚起し、被害状況の可視化を図ることで、国際的な支援や介入を効果的に促進できる可能性がある。
+
+        \item \textbf{新規ユーザー流入による議論の多様化}:
+        本研究は、新規ユーザーの流入が議論のトーンやトピックに与える影響を示しており、これを活用して紛争地域外の声を集める仕組みを設計することで、議論の多様化と偏りの是正が期待できる。プラットフォーム運営者にとっては、議論が閉鎖的なエコーチェンバーに陥らないよう、アルゴリズムの調整が重要となる。
+
+        \item \textbf{議論疲れとメタ議論の抑制策}:
+        後期におけるメタ議論の増加と議論疲れの進行を踏まえ、プラットフォーム運営者は、議論の健全性を維持するためのモデレーション手法を見直す必要がある。たとえば、長期間続く議論には、新たな視点を提供するためのキュレーション機能や、議論の焦点を再設定する仕組みを導入することが効果的である。
+    
+        \item \textbf{オンライン公共圏としてのSNSの設計}:
+        本研究の結果は、SNSがデジタル公共圏として機能する可能性を示唆している。一方で、公共圏の形成には、特定の視点が過剰に強調されないような設計が求められる。プラットフォーム運営者は、アルゴリズムの透明性を向上させ、多様な意見が均等に可視化されるような仕組みを開発するべきである。
+    \end{enumerate}
+
+    \section{結論}
+    本研究は、2024年のイスラエルによるレバノン侵攻を題材に、Redditにおける投稿データを分析することで、SNSが国際紛争において果たす役割とその限界を明らかにした。本研究の成果は、デジタル時代における公共圏の新たな形態を理解するための基盤を提供するとともに、SNS運営者や政策立案者がより健全で多様な議論環境を構築するための実践的な示唆を与えるものである。
+
 
     %=====================================================================================
     \chapter*{謝辞} %章を付けずにタイトル表示
