Remove Pushshift API from subsection title

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -167,7 +167,7 @@
     本章では、Redditにおける投稿データを対象としたデータ収集および分析手法について詳述する。本研究では、信頼性と精度を確保しつつ、大規模な投稿データを効率的に取得するために適切なデータ収集アプローチを採用した。さらに、収集したデータを用いて、投稿数の変化、感情スコアの推移、および議論のトピックの変遷を分析するための方法論を提示する。これにより、データ駆動型の手法が本研究の目的を達成する上でなぜ有効であるかを論じる。
 
     \section{データ収集の方法}
-    \subsection{PRAWおよびPushshift APIを用いたデータ収集}
+    \subsection{PRAWを用いたデータ収集}
     Redditのデータ収集には、PRAW (Python Reddit API Wrapper) を主に使用し、大規模かつ効率的なデータ取得を実現した。
 
     収集対象期間は、イスラエルによるレバノン侵攻（2024年10月1日）の影響を分析するため、2024年7月26日から2024年10月26日までの約3ヶ月間とした。この期間設定により、紛争勃発前の基準値、直後の急激な反応、そしてその後の議論の推移までを包括的にカバーできる。
