--- a/docs/main.tex
+++ b/docs/main.tex
@@ -118,11 +118,11 @@
     \chapter{SNSにおける世論形成と国際紛争に関する先行研究}
 
     \section{SNSと世論形成}
-    ソーシャルネットワーキングサービス（SNS）は、21世紀において世論形成の重要なツールとなり、従来のマスメディアを補完する役割を果たしている。特に、情報が瞬時に広範囲に拡散され、多様な意見が可視化される点で、SNSは「集団行動を促進するツール」として位置づけられている（Shirky, 2011）。例えば、2010年代の「アラブの春」では、TwitterやFacebookを通じて市民がプロテストの呼びかけや情報共有を行い、社会運動の大規模化を支えたことが報告されている（Howard & Hussain, 2013）。このように、SNSは社会的・政治的な動員における迅速性と規模の拡大に寄与している。
+    ソーシャルネットワーキングサービス（SNS）は、21世紀において世論形成の重要なツールとなり、従来のマスメディアを補完する役割を果たしている。特に、情報が瞬時に広範囲に拡散され、多様な意見が可視化される点で、SNSは「集団行動を促進するツール」として位置づけられている（Shirky, 2011）。例えば、2010年代の「アラブの春」では、TwitterやFacebookを通じて市民がプロテストの呼びかけや情報共有を行い、社会運動の大規模化を支えたことが報告されている（Howard \& Hussain, 2013）。このように、SNSは社会的・政治的な動員における迅速性と規模の拡大に寄与している。
 
     一方で、SNSにおける情報流通には限界も指摘されている。Sunstein（2001）やPariser（2011）は、エコーチェンバー現象やフィルターバブルが、ユーザーを特定の情報に偏らせるリスクを指摘している。たとえば、Facebookのアルゴリズムによるフィードの最適化が、政治的分断を助長する可能性があることが示されている。これらの現象は、SNSが多様な意見の交換を促進する一方で、逆に対話の閉鎖性を生む可能性があることを示唆している。
 
-    さらに、SNSが選挙や緊急事態において果たす役割も注目されている。たとえば、2016年のアメリカ大統領選挙では、Twitterを通じての情報戦が候補者のイメージ形成に影響を与えたことが明らかにされている（Allcott & Gentzkow, 2017）。このように、SNSの利用は単なる情報共有を超え、世論形成における戦略的な要素としても機能している。
+    さらに、SNSが選挙や緊急事態において果たす役割も注目されている。たとえば、2016年のアメリカ大統領選挙では、Twitterを通じての情報戦が候補者のイメージ形成に影響を与えたことが明らかにされている（Allcott \& Gentzkow, 2017）。このように、SNSの利用は単なる情報共有を超え、世論形成における戦略的な要素としても機能している。
 
     \section{国際紛争におけるSNSの役割}
     SNSは国際紛争において、単なる情報共有の場を超え、プロパガンダや情報操作の場としても機能している。HowardとHussain（2013）は、アラブの春におけるSNSの役割について、情報の共有と抗議活動の組織化を促進する手段としての重要性を指摘している。また、Zeitzoff（2017）の研究では、イスラエルとハマスの紛争におけるTwitterの使用が、紛争当事者のソフトパワー的な戦略に寄与していることが示されている。たとえば、戦闘の進行状況をリアルタイムで伝えることで、国際的な支持を獲得する動きが観察されている。
