Integrate the word of sentiment score

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -91,7 +91,7 @@
 
     \begin{enumerate}
         \item Redditという匿名性と分散型構造を持つプラットフォームの特性に着目し、これが国際紛争の議論に与える影響を詳細に分析する。
-        \item 投稿数や感情スコアの分析に加え、トピックモデリングを用いることで、SNS上の議論がどのようにテーマを移行させていくかを具体的に明らかにする。
+        \item 投稿数やセンチメントスコアの分析に加え、トピックモデリングを用いることで、SNS上の議論がどのようにテーマを移行させていくかを具体的に明らかにする。
         \item サブサンプリングや差分の差分（DID）分析を活用し、介入（紛争発生）が議論の量的および質的側面に与える影響を因果的に評価する。
     \end{enumerate}
 
@@ -107,7 +107,7 @@
     本論文は以下の構成をとる: 
     \begin{itemize}
         \item 第2章: SNSにおける世論形成と国際紛争に関する先行研究のレビューを行い、Redditの特性について議論する。
-        \item 第3章: データ収集および分析手法を説明し、投稿数、感情スコア、トピックの変化を調査するための具体的な方法論を提示する。
+        \item 第3章: データ収集および分析手法を説明し、投稿数、センチメントスコア、トピックの変化を調査するための具体的な方法論を提示する。
         \item 第4章: 分析結果を提示し、紛争がReddit上の議論に与える影響を示す。
         \item 第5章: 結果を解釈し、SNSが国際紛争における世論形成や情報拡散に果たす役割について考察する。
         \item 第6章: 本研究の結論をまとめ、今後の課題と研究の展望を示す。
@@ -122,7 +122,7 @@
 
     一方で、SNSにおける情報流通には限界も指摘されている。Sunstein（2001）やPariser（2011）は、エコーチェンバー現象やフィルターバブルが、ユーザーを特定の情報に偏らせるリスクを指摘している。たとえば、Facebookのアルゴリズムによるフィードの最適化が、政治的分断を助長する可能性があることが示されている。これらの現象は、SNSが多様な意見の交換を促進する一方で、逆に対話の閉鎖性を生む可能性があることを示唆している。
 
-    さらに、SNSが選挙や緊急事態において果たす役割も注目されている。たとえば、2016年のアメリカ大統領選挙では、Twitterを通じての情報戦が候補者のイメージ形成に影響を与えたことが明らかにされている（Allcott \& Gentzkow, 2017）。このように、SNSの利用は単なる情報共有を超え、世論形成における戦略的な要素としても機能している。
+    さらに、SNSが選挙や緊急事態において果たす役割も注目されている。たとえば、2016年のアメリカ大統領選挙では、Twitterを通じての情報戦が候補者のイメージ形成に影響を与えたことが明らかにされている（Allcott & Gentzkow, 2017）。このように、SNSの利用は単なる情報共有を超え、世論形成における戦略的な要素としても機能している。
 
     \section{国際紛争におけるSNSの役割}
     SNSは国際紛争において、単なる情報共有の場を超え、プロパガンダや情報操作の場としても機能している。HowardとHussain（2013）は、アラブの春におけるSNSの役割について、情報の共有と抗議活動の組織化を促進する手段としての重要性を指摘している。また、Zeitzoff（2017）の研究では、イスラエルとハマスの紛争におけるTwitterの使用が、紛争当事者のソフトパワー的な戦略に寄与していることが示されている。たとえば、戦闘の進行状況をリアルタイムで伝えることで、国際的な支持を獲得する動きが観察されている。
@@ -151,9 +151,9 @@
     \subsection*{2. データ駆動型アプローチの統合}
     従来のSNS研究では、投稿数の変化や感情分析を用いた傾向の把握が主流であった。本研究ではこれらの手法に加え、動的トピックモデリング（DTM）を用いた議論のテーマの変遷分析を組み合わせることで、議論の量的変化だけでなく、その質的側面を時系列的に明らかにすることを試みている。
 
-    具体的には、投稿数の急増や感情スコアの変化を検出するだけでなく、DTMを活用して、議論が「戦闘」「人道危機」「国際支援」などのトピックにどのように分布し、時間の経過とともにどのように移行していくかを分析した。この手法により、投稿者の関心がどの時点で特定のテーマに集中し、その後どのように新たなトピックへと推移していくかを詳細に把握することが可能となる。
+    具体的には、投稿数の急増やセンチメントスコアの変化を検出するだけでなく、DTMを活用して、議論が「戦闘」「人道危機」「国際支援」などのトピックにどのように分布し、時間の経過とともにどのように移行していくかを分析した。この手法により、投稿者の関心がどの時点で特定のテーマに集中し、その後どのように新たなトピックへと推移していくかを詳細に把握することが可能となる。
 
-    特に、紛争直後における投稿数や感情の急激な変化が、どのようなテーマと関連しているのかを検討することで、SNS上の議論形成のダイナミクスをより深く理解するための基盤を提供する。本研究のように量的データ（投稿数や感情スコア）と、トピックという質的側面を統合的に分析するアプローチは、SNS研究における新たな視点を提供するとともに、議論の全体像をより包括的に捉えることに寄与する。
+    特に、紛争直後における投稿数や感情の急激な変化が、どのようなテーマと関連しているのかを検討することで、SNS上の議論形成のダイナミクスをより深く理解するための基盤を提供する。本研究のように量的データ（投稿数やセンチメントスコア）と、トピックという質的側面を統合的に分析するアプローチは、SNS研究における新たな視点を提供するとともに、議論の全体像をより包括的に捉えることに寄与する。
 
     \subsection*{3. 国際紛争とオンライン世論の関係性への新たな知見}
     既存研究では、SNSが国際紛争において果たす役割が、情報拡散やプロテスタントの動員といった「直接的な効果」に焦点を当てることが多かった。一方で、本研究は、Reddit上の議論が紛争当事者への国際的な支持や批判を形成するだけでなく、SNS利用者同士の議論の焦点やトーンがどのように変化し、SNS全体の議論空間に影響を与えるかを検証している。具体的には、サブレディット間での視点の違いや、特定のテーマに対する議論の偏りが、紛争の認識や世論形成に与える影響を多角的に分析している。
@@ -164,7 +164,7 @@
     本研究は、Redditという未開拓のプラットフォームを対象とすることで、SNS研究に新たな学術的貢献を提供している。また、紛争や国際問題における世論形成のプロセスを明らかにすることは、政策立案者や国際機関にとって、SNSを活用した情報戦略の策定やデジタルディプロマシーの構築に向けた実践的な示唆を提供する。
 
     \chapter{データ収集・分析手法}
-    本章では、Redditにおける投稿データを対象としたデータ収集および分析手法について詳述する。本研究では、信頼性と精度を確保しつつ、大規模な投稿データを効率的に取得するために適切なデータ収集アプローチを採用した。さらに、収集したデータを用いて、投稿数の変化、感情スコアの推移、および議論のトピックの変遷を分析するための方法論を提示する。これにより、データ駆動型の手法が本研究の目的を達成する上でなぜ有効であるかを論じる。
+    本章では、Redditにおける投稿データを対象としたデータ収集および分析手法について詳述する。本研究では、信頼性と精度を確保しつつ、大規模な投稿データを効率的に取得するために適切なデータ収集アプローチを採用した。さらに、収集したデータを用いて、投稿数の変化、センチメントスコアの推移、および議論のトピックの変遷を分析するための方法論を提示する。これにより、データ駆動型の手法が本研究の目的を達成する上でなぜ有効であるかを論じる。
 
     \section{データ収集の方法}
     \subsection{PRAWを用いたデータ収集}
@@ -231,7 +231,7 @@
     \subsection*{VADERの仕組みとその意義}
     感情分析には、VADER（Valence Aware Dictionary and sEntiment Reasoner）を使用した。VADERは、ソーシャルメディアのような非構造化テキストに適した辞書ベースの感情分析ツールであり、短文、スラング、絵文字、強調表現（例:「!!!」「VERY」）などを含む多様な文脈を効果的に処理できるよう設計されている。
 
-    VADERのアルゴリズムは、辞書に基づくアプローチを採用しており、単語やフレーズに事前に割り当てられた感情スコア（ポジティブ、ネガティブ、中立）を元に、文章全体の感情スコアを計算する。この辞書は、人間の評価者がラベル付けを行ったデータセットに基づいて構築されており、特にソーシャルメディアやニュースの文脈での利用を想定して作成されている。
+    VADERのアルゴリズムは、辞書に基づくアプローチを採用しており、単語やフレーズに事前に割り当てられたセンチメントスコア（ポジティブ、ネガティブ、中立）を元に、文章全体のセンチメントスコアを計算する。この辞書は、人間の評価者がラベル付けを行ったデータセットに基づいて構築されており、特にソーシャルメディアやニュースの文脈での利用を想定して作成されている。
 
     VADERが広く利用される理由は以下の通りである:
     \begin{itemize}
@@ -243,14 +243,14 @@
     今回の分析においてVADERを使用する意義は、Reddit投稿が一般的な形式的文章とは異なり、インフォーマルで感情的な表現が多く含まれることにある。VADERは、これらの特徴を考慮した感情分析が可能であり、紛争前後における投稿者の感情的な反応を効果的に捉えるツールとして最適である。
 
     \subsection*{紛争前後の感情変化の分析とDIDの必要性}
-    VADERスコア（ポジティブ、ネガティブ、中立）を日次で集計し、感情スコアの変化を紛争前後で比較した。また、センチメントスコアの変化をより定量的に評価するため、DID（差分の差分）分析を適用した。
+    VADERスコア（ポジティブ、ネガティブ、中立）を日次で集計し、センチメントスコアの変化を紛争前後で比較した。また、センチメントスコアの変化をより定量的に評価するため、DID（差分の差分）分析を適用した。
 
     DID分析の採用理由は以下の通り:
     \begin{enumerate}
         \item 因果関係の識別:
-            単に紛争関連サブレディット内のスコアを比較するだけでは、紛争の影響以外の要因（例:一般的な季節変動やイベント）によるスコア変動が結果に影響する可能性がある。DID分析は、対照群（非紛争関連サブレディット）と比較することで、紛争そのものが感情スコアに与えた影響を識別できる。
+            単に紛争関連サブレディット内のスコアを比較するだけでは、紛争の影響以外の要因（例:一般的な季節変動やイベント）によるスコア変動が結果に影響する可能性がある。DID分析は、対照群（非紛争関連サブレディット）と比較することで、紛争そのものがセンチメントスコアに与えた影響を識別できる。
         \item 純粋な介入効果の抽出:
-            紛争前後での処置群（紛争関連サブレディット）の感情スコア変化と、対照群の変化を比較することで、紛争が感情スコアに与えた純粋な影響を明らかにできる。
+            紛争前後での処置群（紛争関連サブレディット）のセンチメントスコア変化と、対照群の変化を比較することで、紛争がセンチメントスコアに与えた純粋な影響を明らかにできる。
     \end{enumerate}
 
     DID分析で使用したモデルは以下の通り:
@@ -260,14 +260,14 @@
 
     ここで、
     \begin{itemize}
-        \item $Sentiment_{it}$:日次VADER感情スコア（ポジティブ、ネガティブ、またはコンパウンドスコア）
+        \item $Sentiment_{it}$:日次VADERセンチメントスコア（ポジティブ、ネガティブ、またはコンパウンドスコア）
         \item $Treatment_{i}$:紛争関連サブレディットであるか否か（1=処置群、0=対照群）
         \item $Post_{t}$:紛争後の期間であるか否か（1=紛争後、0=紛争前）
-        \item $\beta_{3}$:紛争が感情スコアに与える影響を表す推定値
+        \item $\beta_{3}$:紛争がセンチメントスコアに与える影響を表す推定値
     \end{itemize}
 
     \subsection*{分析結果の意義}
-    DID分析により、紛争勃発後、紛争関連サブレディットで感情スコアがネガティブにシフトし、対照群では顕著な変化が見られないことを示す。これにより、紛争がオンライン議論に与える感情的影響を明確にし、Reddit上の議論のダイナミクスを深く理解するための基盤を提供する。
+    DID分析により、紛争勃発後、紛争関連サブレディットでセンチメントスコアがネガティブにシフトし、対照群では顕著な変化が見られないことを示す。これにより、紛争がオンライン議論に与える感情的影響を明確にし、Reddit上の議論のダイナミクスを深く理解するための基盤を提供する。
 
     \section{トピックモデリングによるテーマ分析}
     投稿内容のテーマを分析するため、LDA（潜在ディリクレ配分）ではなく、動的トピックモデリング（Dynamic Topic Modeling, DTM）を採用した。この手法は、議論のトピックが時間とともにどのように変遷するかを詳細に分析することを可能にする。
@@ -284,12 +284,12 @@
     \section{分析手法の有効性}
     本研究で採用した分析手法は、Redditにおけるユーザーの反応を多角的に捉えることを目的としている。特に投稿数や感情の変化を定量的に分析する手法と、投稿内容の詳細な特徴を捉える方法を組み合わせることで、データ駆動型の分析と実証的な議論を可能にしている。それぞれの手法の有効性について以下に論じる。
 
-    \subsection{投稿数および感情スコアの変化に関する定量的分析の有効性}
-    定量的分析は、大規模データセットの全体的な傾向を把握し、外部要因（例: 紛争勃発）がReddit上の議論に与える影響を評価する上で有効である。本研究では、投稿数と感情スコアの変化を時系列で分析し、さらにDID（差分の差分）分析を用いて因果関係を特定している。
+    \subsection{投稿数およびセンチメントスコアの変化に関する定量的分析の有効性}
+    定量的分析は、大規模データセットの全体的な傾向を把握し、外部要因（例: 紛争勃発）がReddit上の議論に与える影響を評価する上で有効である。本研究では、投稿数とセンチメントスコアの変化を時系列で分析し、さらにDID（差分の差分）分析を用いて因果関係を特定している。
 
     DID分析は、自然実験的状況下での因果推論を行うために適した手法であり、紛争関連サブレディット（処置群）と非関連サブレディット（対照群）間の変化を比較することで、紛争が議論活性化や感情表現に与える影響を厳密に評価できる。この手法にサブサンプリングを組み合わせることで、処置群と対照群のデータ数の不均衡を調整し、分析結果の公平性と信頼性を高めている。
 
-    また、感情スコアにはVADER（Valence Aware Dictionary and sEntiment Reasoner）を使用した。VADERはSNSデータに特化して設計されており、スラング、絵文字、文脈依存の表現を効果的に処理する機能を持つ。これにより、投稿のポジティブ、ネガティブ、中立的な感情の傾向を時間軸に沿って分析することが可能となり、重要なイベントに対するユーザーの感情的反応を定量的に評価することができる。
+    また、センチメントスコアにはVADER（Valence Aware Dictionary and sEntiment Reasoner）を使用した。VADERはSNSデータに特化して設計されており、スラング、絵文字、文脈依存の表現を効果的に処理する機能を持つ。これにより、投稿のポジティブ、ネガティブ、中立的な感情の傾向を時間軸に沿って分析することが可能となり、重要なイベントに対するユーザーの感情的反応を定量的に評価することができる。
 
     \subsection{投稿内容の分析に関するアプローチの有効性}
     本研究では、感情分析を補完する形で、投稿内容に含まれる具体的なトピックやテーマの変遷を捉えるため、動的トピックモデリング（DTM）を採用した。この手法は、投稿データをトピックに分解し、時間の経過とともに議論の焦点がどのように移行するかを詳細に明らかにする。
@@ -303,12 +303,12 @@
     Reddit上の投稿が全て人間によるものではなく、一部にはボットやスパム投稿が含まれる可能性がある。この問題に対処するため、投稿パターンやユーザー履歴を基にボットを検出・除外するアルゴリズムの実装が必要である。また、今回の分析ではRedditの特定のサブレディットに焦点を当てたため、他のSNSや他のサブレディットのデータを取り入れることで、より包括的な結果が得られる可能性がある。
 
     \subsection{感情分析の限界}
-    感情分析に使用したVADERはSNSデータに適している一方で、文脈や文化的な違いに起因するニュアンスの違いを完全には捉えられない可能性がある。特に、皮肉や隠喩、暗喩の多用が感情スコアの精度に影響を与える。これに対処するため、一部のデータについて人間のコーディングによる検証を行い、機械的な分析結果の補完を検討する必要がある。
+    感情分析に使用したVADERはSNSデータに適している一方で、文脈や文化的な違いに起因するニュアンスの違いを完全には捉えられない可能性がある。特に、皮肉や隠喩、暗喩の多用がセンチメントスコアの精度に影響を与える。これに対処するため、一部のデータについて人間のコーディングによる検証を行い、機械的な分析結果の補完を検討する必要がある。
 
     \subsection{結果の一般化可能性の制約}
     本研究で得られた知見は、イスラエル・レバノン紛争という特定の文脈に基づいており、全ての国際紛争に適用できるわけではない。結果の一般化可能性を評価するため、ウクライナ紛争や南シナ海問題など他の紛争事例を対象に同様の分析を行い、比較研究を進めることが今後の課題となる。
 
-    本研究は、投稿数と感情スコアの変化をDID分析で因果推論し、動的トピックモデリングでテーマの移り変わりを追跡することで、SNSにおけるユーザー反応の複雑な構造を明らかにするための重要な一歩を示している。一方で、限界点に対処し、さらなる改善を加えることで、より信頼性の高い結論を導き出すことが可能となる。
+    本研究は、投稿数とセンチメントスコアの変化をDID分析で因果推論し、動的トピックモデリングでテーマの移り変わりを追跡することで、SNSにおけるユーザー反応の複雑な構造を明らかにするための重要な一歩を示している。一方で、限界点に対処し、さらなる改善を加えることで、より信頼性の高い結論を導き出すことが可能となる。
 
     \section{倫理的配慮}
     オンラインデータの収集と分析には特有の倫理的問題が存在するため、以下の点に特に注意を払う:
@@ -328,7 +328,7 @@
     これらの倫理的配慮は、研究の全過程を通じて徹底され、必要に応じて大学の倫理委員会の審査を受ける。研究者は常に倫理的な観点から研究を進め、データの収集・分析・公表において社会的責任を果たすことを心がける。
 
     \section{まとめ}
-    本章では、Redditにおける投稿データを用いたデータ収集および分析手法について詳細に論じた。本研究では、Pushshift APIを用いた効率的なデータ収集手法を採用し、投稿数の変化、感情スコアの推移、議論のトピックの変遷を明らかにするための多様な分析手法を組み合わせたアプローチを採用している。
+    本章では、Redditにおける投稿データを用いたデータ収集および分析手法について詳細に論じた。本研究では、Pushshift APIを用いた効率的なデータ収集手法を採用し、投稿数の変化、センチメントスコアの推移、議論のトピックの変遷を明らかにするための多様な分析手法を組み合わせたアプローチを採用している。
 
     特に、投稿数の時系列分析、VADERを用いた感情分析、動的トピックモデリング（DTM）によるテーマの変遷分析などを組み合わせることで、単なる投稿数の増減だけでなく、議論の焦点や感情的な傾向、そしてこれらが時間の経過とともにどのように推移するかを総合的に把握することが可能となる。これらの手法は、紛争や政治的イベントに対するユーザーの反応をより深く理解するための有効な手段であるといえる。
 
@@ -529,7 +529,7 @@
     \chapter{まとめ}
 
     \section{研究の要約}
-    本研究は、2024年10月1日のイスラエルによるレバノン侵攻を契機として、Reddit上における議論の変遷を分析し、SNSが国際紛争に果たす役割を明らかにすることを目的として実施された。投稿数の変化、感情スコアの推移、トピックの変遷という3つの観点から、多角的なデータ分析を行った結果、以下の知見が得られた:
+    本研究は、2024年10月1日のイスラエルによるレバノン侵攻を契機として、Reddit上における議論の変遷を分析し、SNSが国際紛争に果たす役割を明らかにすることを目的として実施された。投稿数の変化、センチメントスコアの推移、トピックの変遷という3つの観点から、多角的なデータ分析を行った結果、以下の知見が得られた:
 
     \begin{enumerate}
         \item 投稿数の急増は、新規ユーザーの流入や紛争関連情報の共有が活発化したことを示し、SNSがデジタル公共圏として機能する一端を明らかにした。
