Fix format of cover

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -29,7 +29,7 @@
     \thispagestyle{empty}
     \begin{center}
         \vspace{20mm}
-        {\Large\noindent 2024年度 卒業(学士)論文}\\
+        {\Large\noindent 2024年度 卒業論文}\\
         \vspace{40mm}
         {\huge\noindent\textbf{SNSにおける世論形成と紛争に関するReddit投稿分析}}\\
         \medskip
@@ -37,7 +37,7 @@
         \vspace{\baselineskip}
         \vspace{40mm}
 
-        {\Large\noindent 2025年1月31日\\ \vspace{\baselineskip} 指導教員 崎田智子 \\ \vspace{\baselineskip} 同志社大学\\ グローバル地域文化学部グローバル地域文化学科アジア・太平洋コース \\ \vspace{\baselineskip} 1122192047 種村尚大\\ }
+        {\Large\noindent 2025年1月31日\\ \vspace{\baselineskip} 指導教員 崎田智子 \\ \vspace{\baselineskip} グローバル地域文化学部グローバル地域文化学科アジア・太平洋コース \\ \vspace{\baselineskip} 1122192047 種村尚大\\ }
         \vspace{40mm}
     \end{center}
 
