--- a/docs/main.tex
+++ b/docs/main.tex
@@ -122,7 +122,7 @@
 
     一方で、SNSにおける情報流通には限界も指摘されている。Sunstein（2001）やPariser（2011）は、エコーチェンバー現象やフィルターバブルが、ユーザーを特定の情報に偏らせるリスクを指摘している。たとえば、Facebookのアルゴリズムによるフィードの最適化が、政治的分断を助長する可能性があることが示されている。これらの現象は、SNSが多様な意見の交換を促進する一方で、逆に対話の閉鎖性を生む可能性があることを示唆している。
 
-    さらに、SNSが選挙や緊急事態において果たす役割も注目されている。たとえば、2016年のアメリカ大統領選挙では、Twitterを通じての情報戦が候補者のイメージ形成に影響を与えたことが明らかにされている（Allcott & Gentzkow, 2017）。このように、SNSの利用は単なる情報共有を超え、世論形成における戦略的な要素としても機能している。
+    さらに、SNSが選挙や緊急事態において果たす役割も注目されている。たとえば、2016年のアメリカ大統領選挙では、Twitterを通じての情報戦が候補者のイメージ形成に影響を与えたことが明らかにされている（Allcott \& Gentzkow, 2017）。このように、SNSの利用は単なる情報共有を超え、世論形成における戦略的な要素としても機能している。
 
     \section{国際紛争におけるSNSの役割}
     SNSは国際紛争において、単なる情報共有の場を超え、プロパガンダや情報操作の場としても機能している。HowardとHussain（2013）は、アラブの春におけるSNSの役割について、情報の共有と抗議活動の組織化を促進する手段としての重要性を指摘している。また、Zeitzoff（2017）の研究では、イスラエルとハマスの紛争におけるTwitterの使用が、紛争当事者のソフトパワー的な戦略に寄与していることが示されている。たとえば、戦闘の進行状況をリアルタイムで伝えることで、国際的な支持を獲得する動きが観察されている。
