Fix format of cover

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -20,6 +20,7 @@
 \usepackage{textcomp}
 \usepackage{xcolor}
 \usepackage[ipaex]{pxchfon}
+\usepackage{otf}
 
 \usepackage[top=30truemm, bottom=30truemm, left=25truemm, right=25truemm]{
     geometry
@@ -37,7 +38,7 @@
         \vspace{\baselineskip}
         \vspace{40mm}
 
-        {\Large\noindent 2025年1月31日\\ \vspace{\baselineskip} 指導教員 崎田智子 \\ \vspace{\baselineskip} グローバル地域文化学部グローバル地域文化学科アジア・太平洋コース \\ \vspace{\baselineskip} 1122192047 種村尚大\\ }
+        {\Large\noindent \vspace{\baselineskip} 指導教員 﨑\CID{8443}田智子 \\ \vspace{\baselineskip} グローバル地域文化学部 アジア・太平洋コース \\ \vspace{\baselineskip} 学生ID: 1122192047 氏名: 種村尚大\\ }
         \vspace{40mm}
     \end{center}
 
