Page number starts from 1st chapter

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -55,7 +55,12 @@
     %=====================================================================================
 
     % 目次の表示
+    {\makeatletter
+    \let\ps@jpl@in\ps@empty
+    \makeatother
+    \pagestyle{empty}
     \tableofcontents
+    \clearpage}
 
     %=====================================================================================
     \pagestyle{fancy}
@@ -64,6 +69,7 @@
     %=====================================================================================
 
     \chapter{はじめに} %章
+    \setcounter{page}{1} % 第一章の開始ページからページ番号を振る
 
     \section{研究背景}
 
