--- a/docs/main.tex
+++ b/docs/main.tex
@@ -61,9 +61,8 @@
     \pagestyle{empty}
     \tableofcontents
     \clearpage}
-
     %=====================================================================================
-    \pagestyle{fancy}
+    \pagestyle{plain}
     \lhead{\rightmark}
     \renewcommand{\chaptermark}[1]{\markboth{第\ \normalfont\thechapter\ 章~~#1}{}}
     %=====================================================================================
